--- a/style.css
+++ b/style.css
@@ -249,6 +249,31 @@ footer a:hover {
   color: #666;
 }
 
+.homepage-categories {
+  margin-top: 40px;
+}
+
+.category-block {
+  margin-bottom: 24px;
+}
+
+.category-block h3 {
+  margin-bottom: 6px;
+}
+
+.category-block p {
+  color: #555;
+  max-width: 700px;
+}
+
+.category-block .nav-disabled {
+  font-size: 0.9rem;
+}
+
+
+
+
+
 
 
 
